# Web-application-for-trainers

./: .env.example  .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  seed_posts.sh  seed_trainers.sh
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_customuser_is_trainer_customuser_status.py
accounts/tests/: factories.py
apps/accounts/: adapters.py  admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
apps/accounts/migrations/: 0003_remove_customuser_sport_alter_customuser_is_active.py  (+2 more)
apps/admin_dashboard/: __init__.py  selectors.py  urls.py  views.py
apps/pages/: services.py  urls.py  views.py
apps/trainers/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
chat/: Dockerfile  database.py  main.py  models.py  pyproject.toml  schemas.py
chat/alembic/: env.py
chat/alembic/versions/: 654a43c4a3c6_init_chat_messages.py  ffe36434309f_add_chat_rooms.py
config/: settings.py
core/: middleware.py  settings.py  test_settings.py  urls.py
pages/: urls.py
static/css/: style.css
static/js/: scripts.js
templates/: 404.html  base.html  ratelimited.html
templates/accounts/: activation_email.html  login.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  register.html  registration_success.html
templates/chat/: index.html
templates/emails/: base.html
templates/includes/: bottom_nav.html  footer.html  header.html
templates/pages/: about.html  contact.html  knowledge_base.html  privacy.html
templates/trainers/: account.html  admin_dashboard.html  apply.html  home_search.html  post_form.html  post_list.html  public_post.html  public_profile.html
tests/: conftest.py  test_auth.py
trainers/: forms.py  models.py  urls.py  views.py
trainers/migrations/: 0001_initial.py  0003_trainerprofile_classes_description_and_more.py  0004_alter_trainerprofile_contact_phone_and_more.py  0005_trainerprofile_gender_trainerprofileupdate_gender.py  0007_alter_trainerprofile_full_name_and_more.py  0008_alter_trainerprofile_contact_phone_and_more.py
trainers/tests/: factories.py
(+57 files in other folders)
