[project]
name = "trainapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "factory-boy>=3.3.3",
    "faker>=40.22.0",
    "google-genai>=2.8.0",
    "django-allauth[socialaccount]>=65.18.0",
    "python-dotenv>=1.2.2",
]
