[project]
name = "trainapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "factory-boy>=3.3.3",
    "faker>=40.22.0",
    "google-genai>=2.8.0",
    "django-allauth[socialaccount]>=65.18.0",
    "python-dotenv>=1.2.2",
    "celery>=5.6.3",
    "redis>=8.0.0",
    "django-ratelimit>=4.1.0",
    "django-cleanup>=9.0.0",
    "django-autoslug>=1.9.9",
    "django-debug-toolbar>=7.0.0",
    "django-storages>=1.14.6",
    "boto3>=1.43.38",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "greenlet>=3.5.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.test_settings"
python_files = ["test_*.py", "*_test.py"]

[tool.uv.workspace]
members = [
    "chat",
]
